--- a/lstm_stock_model.ipynb
+++ b/lstm_stock_model.ipynb
@@ -4,9 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "> Name: Sushant Pokharel \n",
-    ">\n",
-    "> ID: NP03A190316"
+    "> Name: Sushant Pokharel \n"
    ]
   },
   {
